# VoxCommander

./: .gitignore  .gitmodules  PROJECT_CONTEXT.md  WALKTHROUGH.md  cleanGit.sh  gradle.properties  models.json  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/voxcommander/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  untitled.sh
app/src/main/assets/: models.json  search_definitions.json
app/src/main/assets/translations/: de.json  en.json  fr.json  ro.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/voxcommander/app/: MainActivity.kt  VoxApplication.kt
app/src/main/java/com/voxcommander/app/data/local/: FastMapRule.kt
app/src/main/java/com/voxcommander/app/data/local/dao/: FastMapDao.kt
app/src/main/java/com/voxcommander/app/data/preferences/: AppSettings.kt  DataStoreProvider.kt  SettingsManager.kt  SettingsRepository.kt  SettingsRepositoryImpl.kt
app/src/main/java/com/voxcommander/app/data/remote/: DownloadCompleteReceiver.kt  ModelDownloader.kt  RemoteModelRegistry.kt  VoskModelParser.kt  WhisperEngineManager.kt
app/src/main/java/com/voxcommander/app/di/: AppContainer.kt
app/src/main/java/com/voxcommander/app/domain/conversation/: ConversationHandler.kt  ConversationStateMachine.kt
app/src/main/java/com/voxcommander/app/domain/diagnostic/: BenchmarkEngine.kt  VulkanProbe.kt  VulkanProbeService.kt
app/src/main/java/com/voxcommander/app/domain/engine/: AndroidTtsEngine.kt  ITtsEngine.kt  SttEngine.kt
app/src/main/java/com/voxcommander/app/domain/intent/: IntentDecisionMap.kt
app/src/main/java/com/voxcommander/app/domain/localization/: LanguageManager.kt
app/src/main/java/com/voxcommander/app/domain/model/: AppModel.kt
app/src/main/java/com/voxcommander/app/domain/search/: DynamicSearchProvider.kt  LocationHelper.kt  SearchProviderRegistry.kt  SearchProviderRouter.kt  SearchResultsHolder.kt
app/src/main/java/com/voxcommander/app/domain/voice/: TtsManager.kt  VoiceFeatureExtractor.kt  VoiceManager.kt  WakeWordCalibrator.kt  WakeWordProfile.kt
app/src/main/java/com/voxcommander/app/service/: IWakeWordEngine.kt  MediaSessionListenerService.kt  OpenWakeWordEngine.kt  PorcupineWakeWordEngine.kt  SpotifyPkceManager.kt  SpotifyRemoteManager.kt  SpotifyWebApi.kt  VoiceStateManager.kt  WakeWordEngine.kt  WakeWordService.kt
app/src/main/java/com/voxcommander/app/state/: AppState.kt  AppStateManager.kt
app/src/main/java/com/voxcommander/app/ui/components/: AppScanModal.kt  AppSelectorDropdown.kt  ConnectionTestIndicator.kt  EngineModelSection.kt  GroupedDropdown.kt  MicrophoneButton.kt  TopHeaderContainer.kt  VoiceInputTextField.kt  VoiceOverlay.kt  VoiceOverlayManager.kt  VulkanTestModal.kt
app/src/main/java/com/voxcommander/app/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/voxcommander/app/ui/viewmodels/: MainViewModel.kt  ModelManagementViewModel.kt
app/src/main/java/com/voxcommander/app/utils/: FileHelper.kt  Logger.kt  NetworkMonitor.kt  PermissionUtils.kt  RegexGenerator.kt  Strings.kt  VoiceIntentLauncher.kt  WavUtils.kt
app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt
app/src/main/res/drawable/: splash_background.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/voxcommander/app/: ExampleUnitTest.kt
app/src/test/java/com/voxcommander/app/data/preferences/: AppSettingsTest.kt
app/src/test/java/com/voxcommander/app/data/remote/: ModelDownloaderTest.kt  RemoteModelRegistryTest.kt  WhisperEngineManagerTest.kt
app/src/test/java/com/voxcommander/app/domain/: FallbackCleanupTest.kt  IntegrationChainTest.kt
app/src/test/java/com/voxcommander/app/domain/engine/: FastMapEngineTest.kt
app/src/test/java/com/voxcommander/app/domain/intent/: IntentDecisionMapTest.kt
app/src/test/java/com/voxcommander/app/domain/model/: AppModelTest.kt
app/src/test/java/com/voxcommander/app/state/: AppStateManagerTest.kt  AppStateTest.kt
app/src/test/java/com/voxcommander/app/testutil/: TestDataFactory.kt
app/src/test/java/com/voxcommander/app/ui/viewmodels/: ModelManagementViewModelTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: check_vosk_version.sh  check_whisper.sh  publish_whisper_libs.sh
(+57 files in other folders)
